2008-06-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* examples/app/Makefile.am:
	* examples/app/appsrc-ra.c: (feed_data), (seek_data),
	(found_source), (bus_message), (main):
	* examples/app/appsrc-seekable.c: (feed_data), (seek_data),
	(found_source), (bus_message), (main):
	* examples/app/appsrc-stream2.c: (feed_data), (found_source),
	(bus_message), (main):
	Added 3 more example application for using appsrc in random-access mode,
	pull-mode streaming and pull mode seekable.

	* gst-libs/gst/app/gstappsrc.c: (gst_app_src_class_init),
	(gst_app_src_start), (gst_app_src_do_get_size),
	(gst_app_src_create):
	* gst-libs/gst/app/gstappsrc.h:
	Make stream-type property writable.
	Unset flushing when starting so that we reuse appsrc.
	Inform basesrc about the configured size.
	Emit seek-data signal when we are going to a different offset in
	random-access mode.

2008-06-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* examples/app/appsrc-stream.c: (found_source), (main):
	Use deep-notify until we can depend on a playbin2 with support for the
	source property.

2008-06-06  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_init),
	(gst_rtp_bin_finalize), (gst_rtp_bin_change_state):
	Fix deadlock when shutting down, use a new lock instead to properly
	shutdown.

2008-06-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* examples/app/.cvsignore:
	* examples/app/Makefile.am:
	* examples/app/appsrc-stream.c: (read_data), (start_feed),
	(stop_feed), (found_source), (bus_message), (main):
	Added an example on how to use appsrc in playbin in streaming mode from
	an mmapped file.

	* examples/app/appsrc_ex.c: (main):
	Set pipeline to NULL to free queued buffers.

	* gst-libs/gst/app/gstapp-marshal.list:
	* gst-libs/gst/app/gstappsrc.c: (stream_type_get_type), (_do_init),
	(gst_app_src_class_init), (gst_app_src_init),
	(gst_app_src_flush_queued), (gst_app_src_dispose),
	(gst_app_src_set_property), (gst_app_src_get_property),